# pikko

./: .dockerignore  .gitignore  Dockerfile  LIMIT.md  README.md  compose.yaml  example.env  main.py  makefile  pyproject.toml
agents/: __init__.py  character_architect.py  character_artist.py  episode_writer.py  orchestrator.py  plot_designer.py  scene_designer.py  settings.py  storyboard_artist.py  world_builder.py
app/: config.yaml  main.py
clients/: __init__.py  volcengine.py
context/: __init__.py  loader.py  production_guidelines.md  style_guide.md  workflow_rules.md
db/: __init__.py  session.py  url.py
models/: __init__.py  base.py  character.py  episode.py  project.py  storyboard.py  world.py
scripts/: format.sh  validate.sh
tools/: character_tools.py  episode_tools.py  project_tools.py  storyboard_tools.py  workflow_runner.py
utils/: parsers.py
workflows/: __init__.py  character_design.py  episode_production.py  storyboard.py  world_building.py
