[project]
name = "pikko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.9",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.27",
    "openai",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
]
